@@ -17,6 +17,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug [views] VIEW name created via the GUI was not protected with backquotes 
 - bug #1989813 [interface] Deleting multiple views (space in name) 
 - bug #1992628 [parser] SQL parser removes essential space 
+- bug #1989281 [export] Export fails if one table is marked as crashed
 
 2.11.7.0 (2008-06-23)
 - bug #1908719 [interface] New field cannot be auto-increment and primary key 
